--- a/src/pages/rules/rules.css
+++ b/src/pages/rules/rules.css
@@ -7,17 +7,11 @@
   justify-content: space-between;
 }
 .rules {
-  width: 50%;
+  width: fit-content;
   margin: auto;
   padding: var(--md-space);
   box-shadow: var(--card-shadow);
   border: 1px solid var(--primary-color);
   border-radius: 4.8px;
   gap: var(--lg-space);
-}
-
-@media screen and (max-width: 1000px) {
-  .rules {
-    width: 90%;
-  }
 }
